Plateset perf & miscellaneous fixes (#5333)